--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -613,90 +613,90 @@ jobs:
   #         -e standby_number=2 \
   #         -e primary_source_type=active
 
-  slack-notification:
-    if: ${{ failure() }}
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    needs: [oracle-rman-pre-duplicate,oracle-rman-duplicate,oracle-rman-post-duplicate,oracle-build-ha]
-    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
-    steps:
+  # slack-notification:
+  #   if: ${{ failure() }}
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+  #   needs: [oracle-rman-pre-duplicate,oracle-rman-duplicate,oracle-rman-post-duplicate,oracle-build-ha]
+  #   environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+  #   steps:
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          aws-region: "eu-west-2"
+  #     - name: Configure AWS Credentials
+  #       id: login-aws
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+  #         role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+  #         aws-region: "eu-west-2"
 
-      - name: Get Slack Token
-        id: get-slack-token
-        shell: bash
-        run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
-                jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
-                jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
-          SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
-          SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
-          SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
-          echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
+  #     - name: Get Slack Token
+  #       id: get-slack-token
+  #       shell: bash
+  #       run: |
+  #         ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+  #         OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
+  #               jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+  #               jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
+  #         SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
+  #         SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+  #         SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
+  #         echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
 
-          if [[ "${{ needs.oracle-rman-pre-duplicate.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-rman-pre-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-rman-duplicate.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-rman-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-rman-post-duplicate.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-rman-post-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ needs.oracle-build-ha.result }}" == "failure" ]]
-          then
-            echo "jobid=${{ needs.oracle-build-ha.outputs.JobId }}" >> $GITHUB_OUTPUT
-          fi
+  #         if [[ "${{ needs.oracle-rman-pre-duplicate.result }}" == "failure" ]]
+  #         then
+  #           echo "jobid=${{ needs.oracle-rman-pre-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
+  #         elif [[ "${{ needs.oracle-rman-duplicate.result }}" == "failure" ]]
+  #         then
+  #           echo "jobid=${{ needs.oracle-rman-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
+  #         elif [[ "${{ needs.oracle-rman-post-duplicate.result }}" == "failure" ]]
+  #         then
+  #           echo "jobid=${{ needs.oracle-rman-post-duplicate.outputs.JobId }}" >> $GITHUB_OUTPUT
+  #         elif [[ "${{ needs.oracle-build-ha.result }}" == "failure" ]]
+  #         then
+  #           echo "jobid=${{ needs.oracle-build-ha.outputs.JobId }}" >> $GITHUB_OUTPUT
+  #         fi
 
-      - name: Slack Failure Notification
-        id: slack
-        uses: slackapi/slack-github-action@v1.25.0
-        with:
-            channel-id: "delius-aws-oracle-dev-alerts"
-            payload: |
-              { 
-                "icon_emoji":"broken_record",
-                "text":"Failed RMAN Duplicate",
-                "blocks":[
-                  {
-                    "type": "section",
-                    "text": 
-                    {
-                      "type": "mrkdwn",
-                      "text": ":no_entry: Failed RMAN Duplicate:"}
-                    },
-                    {
-                      "type": "section",
-                      "fields":[
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Repo:*\n${{ github.repository }}"
-                          },
-                          {
-                            "type": "mrkdwn",
-                            "text": "*Duplicate Target:*\n${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }}"
-                          }
-                        ]
-                    }  
-                  ]
-                }
-        env:
-          SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
+  #     - name: Slack Failure Notification
+  #       id: slack
+  #       uses: slackapi/slack-github-action@v1.25.0
+  #       with:
+  #           channel-id: "delius-aws-oracle-dev-alerts"
+  #           payload: |
+  #             { 
+  #               "icon_emoji":"broken_record",
+  #               "text":"Failed RMAN Duplicate",
+  #               "blocks":[
+  #                 {
+  #                   "type": "section",
+  #                   "text": 
+  #                   {
+  #                     "type": "mrkdwn",
+  #                     "text": ":no_entry: Failed RMAN Duplicate:"}
+  #                   },
+  #                   {
+  #                     "type": "section",
+  #                     "fields":[
+  #                         {
+  #                           "type": "mrkdwn",
+  #                           "text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
+  #                         },
+  #                         {
+  #                           "type": "mrkdwn",
+  #                           "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
+  #                         },
+  #                         {
+  #                           "type": "mrkdwn",
+  #                           "text": "*Repo:*\n${{ github.repository }}"
+  #                         },
+  #                         {
+  #                           "type": "mrkdwn",
+  #                           "text": "*Duplicate Target:*\n${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }}"
+  #                         }
+  #                       ]
+  #                   }  
+  #                 ]
+  #               }
+  #       env:
+  #         SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
           
