--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -33,6 +33,15 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+      VerboseOutput:
+        description: "Verbose Output level"
+        type: string
+        default: ""
+        options:
+          - ""
+          - "-vv"
+          - "-vvv"
+          - "-vvvv"
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
@@ -117,4 +126,4 @@ jobs:
           -e ndelius_version=${{ github.event.inputs.Version }} \
           -e create_restore_point=${{ github.event.inputs.CreateRestorePoint }} \
           -e environment=${{ github.event.inputs.TargetEnvironment }} \
-          -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}
+          -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} ${{ github.event.inputs.VerboseOutput }}
