--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -125,5 +125,5 @@ jobs:
           $command -i $inventory -e target_hosts=${{ steps.definetargets.outputs.primary_db_host }} \
           -e ndelius_version=${{ github.event.inputs.Version }} \
           -e create_restore_point=${{ github.event.inputs.CreateRestorePoint }} \
-          -e environment=${{ github.event.inputs.TargetEnvironment }} \
+          -e target_environment=${{ github.event.inputs.TargetEnvironment }} \
           -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} ${{ github.event.inputs.VerboseOutput }}
