--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -173,10 +173,12 @@ jobs:
                                                         --table-name dev-non-working-days \
                                                         --key "{\"code_value\":{\"S\":\"20251225\"}}" \
                                                         --projection-expression "code_value" --output json
+             echo $?
              aws dynamodb --region eu-west-2 get-item \
                                                         --table-name dev-non-working-days \
                                                         --key "{\"code_value\":{\"S\":\"20250603\"}}" \
                                                         --projection-expression "code_value" --output json
+             echo $?
 
       - name: Run Check Working Day Playbook
         shell: bash
