--- a/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
@@ -129,8 +129,19 @@
          ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_ha/../oracle_parameters/set_oracle_parameters
          echo "TARGET"
          ls -l /github/home/.ansible
-        echo "ROLE"
+         echo "ROLE"
          ls -l /github/home/.ansible/roles
+  register: where_is_it
+  run_once: true
+  delegate_to: localhost
+  become: no
+
+- debug:
+    var: where_is_it
+  run_once: true
+  delegate_to: localhost
+  become: no
+
   
 
 - name: (main/set-standby-config) Link to Oracle Parameters Role
