--- a/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
@@ -121,6 +121,8 @@
   include_role:
      name: oracle_parameters
      tasks_from: sqlnet_parameters
+  become: true
+  become_user: "{{ rdbms_service_user.name }}"
 
 - name: (main/set-standby-config) Stop/Start standby listener
   shell: "export PATH=/usr/sbin:/usr/local/bin:$PATH; export ORAENV_ASK=NO; export ORACLE_SID=+ASM; . oraenv; srvctl stop listener -l LISTENER; srvctl start listener -l LISTENER"
