--- a/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-standby-config.yml
@@ -118,11 +118,14 @@
   become: no
 
 - name: (main/set-standby-config) Configure sqlnet.ora file
-  include_role:
-     name: oracle_parameters
-     tasks_from: sqlnet_parameters
   become: true
   become_user: "{{ rdbms_service_user.name }}"
+  block:
+
+    - name: (main/set-standby-config) Configure sqlnet.ora file
+      include_role:
+        name: oracle_parameters
+        tasks_from: sqlnet_parameters
 
 - name: (main/set-standby-config) Stop/Start standby listener
   shell: "export PATH=/usr/sbin:/usr/local/bin:$PATH; export ORAENV_ASK=NO; export ORACLE_SID=+ASM; . oraenv; srvctl stop listener -l LISTENER; srvctl start listener -l LISTENER"
